public class DuplicateConnectionException extends ConnectionException {
    public DuplicateConnectionException(String message) {
        super(message);
    }
}